Enable "Execute" function based on connectivity layer's latest change

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -4,3 +4,6 @@ DatabaseManagement.command.explain=Get Execution Plan
 DatabaseManagement.command.execute=Execute All
 DatabaseManagement.command.execute.select=Execute Selected Text
 sqlEditorName=SQL Editor
+
+context.editingSQL.name=Editing SQL
+context.editingSQL.description=Editing SQL
