[126832] Fix problems with externalized strings

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -24,13 +24,13 @@ ExportProfilesDialog.btnEncryption.text=Encrypt file content
 actions.export.noselection = Please select at least one connection profile!
 actions.export.nofile = Please specify file name!
 dialog.exception.title = Exception
-dialog.exception.message = Exception caught: {0}
+dialog.exception.message = Exception caught\: {0}
 NewCPWizard.title = New Connection Profile
 IntroductionWizardPage.title = Introduction Page
 IntroductionWizardPage.intro = This wizard walks through the steps to create a connection profile.
 CPWizardSelectionPage.title = Wizard Selection Page
 CPWizardSelectionPage.desc = Select a connection profile type to proceed
-CPWizardSelectionPage.group = Please select the connection profile type:
+CPWizardSelectionPage.group = Please select the connection profile type\:
 actions.connect.job = Connect server job
 actions.connect.uijob = Refreshing View
 actions.ping.job = Ping server job
@@ -66,9 +66,9 @@ NewConnectionProfileWizardPage.Status.DuplicateName = Connection profile name al
 NewConnectionProfileWizardPage.Status.NoName = Please specify connection profile name!
 NewConnectionProfileWizardPage.title = Create connection profile
 NewConnectionProfileWizardPage.desc = Please enter detailed information
-NewConnectionProfileWizardPage.cp_name = Name:
-NewConnectionProfileWizardPage.cp_desc = Description(optional):
-NewConnectionProfileWizardPage.choices = Please select:
+NewConnectionProfileWizardPage.cp_name = Name\:
+NewConnectionProfileWizardPage.cp_desc = Description(optional)\:
+NewConnectionProfileWizardPage.choices = Please select\:
 NewConnectionProfileWizardPage.summary_cp_name = Name
 NewConnectionProfileWizardPage.summary_cp_desc = Description
 NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect when the wizard is finished or when Enterprise Explorer opens.
@@ -84,11 +84,11 @@ SummaryWizardPage.value = Value
 dialog.title.error = Error
 dialog.title.success = Success
 rename.dialog.title = Rename Dialog
-rename.dialog.message = Please input a new connection profile name:
+rename.dialog.message = Please input a new connection profile name\:
 rename.dialog.errmsg.existing = Name exists, please input a different one!
 rename.dialog.errmsg.invalid = Invalid name, please type in a valid name!
 error.connect = {1}.  See log file for more details.
-error.contentExtension =Error connecting to the "{0}" extension on profile "{1}" (Error: {2})
+error.contentExtension =Error connecting to the "{0}" extension on profile "{1}" (Error\: {2})
 CPVersionPropertyPage.desc=Version information for {0}.\nThis information was obtained from the last connection attempt.  If the last attempt to connect was unsuccessful, no version information will be available.
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
-CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
+CPVersionPropertyPage.label.techVersions=The following technologies are available on this server\:
