--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -18,16 +18,16 @@ DisconnectJob.name=Closing connections to {0}.
 DisconnectJob.status.info=Could not close connections to {0} for one or more extensions.
 DisconnectJob.status.error=Could not disconnect from {0}.
 CreateConnectionJob.name=Creating {0} connection to {1}.
-CreateConnectionJob.error=Error creating {0} connection to {1}. (Error: {2})
+CreateConnectionJob.error=Error creating {0} connection to {1}. (Error\: {2})
 OpenConnectionEventJob.name=Processing open connection event for {0}.
-CloseManagedConnectionJob.name=Closing {0} connection to {1}. (Error: {2})
+CloseManagedConnectionJob.name=Closing {0} connection to {1}. (Error\: {2})
 CloseManagedConnectionJob.error=Error closing {0} connection to {1}.
 CloseConnectionEventJob.name=Processing close connection event for {0}.
-assert.invalid.profile = Parsing error: invalid attribute ({0})
+assert.invalid.profile = Parsing error\: invalid attribute ({0})
 dialog.title.error.loadwizard = Error loading new wizard in "{0}"!
-operation.new.connectionprofile = Creating profile: "{0}"
+operation.new.connectionprofile = Creating profile\: "{0}"
 error.connect = Problem connecting to profile "{0}."  See log file for more details.
-marker.error = Problem connecting to profile {0}.  (Error: {1})
+marker.error = Problem connecting to profile {0}.  (Error\: {1})
 profile.duplicate = Duplicate connection profile name "{0}"!
-profile.notexist = Connection profile "{0}" doesn't exist!
+profile.notexist = Connection profile "{0}" does not exist!
 duplicate.profile.name = Copy of {0}({1})
