--- a/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.xml
@@ -15,7 +15,7 @@
  *  
  *************************************************************************
  *
- * $Id: plugin.xml,v 1.1 2005/12/29 04:17:56 lchan Exp $
+ * $Id: plugin.xml,v 1.2 2006/02/04 10:30:26 lchan Exp $
  */
 -->
 
@@ -29,6 +29,7 @@
     <import plugin="org.eclipse.core.runtime" />
     <import plugin="org.eclipse.emf.ecore" export="true"/>
     <import plugin="org.eclipse.emf.ecore.xmi" export="true"/>
+    <import plugin="com.ibm.icu" export="true"/>
   </requires>
 
   <runtime>
