--- a/plugins/org.eclipse.datatools.connectivity/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity/build.properties
@@ -6,10 +6,9 @@ bin.includes = plugin.xml,\
                icons/,\
                META-INF/,\
                connectivity.jar
-
 jars.compile.order 	= connectivity.jar
 output.connectivity.jar = bin/
-jars.extra.classpath =
+source.connectivity.jar = src/
 src.dir			 = src/
 plugin.version =	0.7.0
 javadoc.dir =		doc/api/
