*** empty log message ***

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.xml
@@ -54,6 +54,7 @@
 			<include name="org.eclipse.jface_*.jar"/>
 			<include name="org.eclipse.core.commands_*.jar"/>
 			<include name="org.eclipse.ui.workbench_*.jar"/>
+			<include name="org.eclipse.ui.navigator_*.jar"/>
 			<include name="com.ibm.icu_*.jar"/>
 			<!-- Include expanded plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
