--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.xml
@@ -49,6 +49,7 @@
 			<include name="org.eclipse.jface_*.jar"/>
 			<include name="org.eclipse.core.commands_*.jar"/>
 			<include name="org.eclipse.ui.workbench_*.jar"/>
+			<include name="org.eclipse.ui.navigator_*.jar"/>
 			<!-- Include expanded plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
