--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/build.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/build.xml
@@ -50,6 +50,7 @@
 			<include name="org.eclipse.core.resources_*.jar"/>
 			<include name="org.eclipse.ui.ide_*.jar"/>
 			<include name="org.eclipse.ui.views_*.jar"/>
+			<include name="org.eclipse.ui.navigator_*.jar"/>
 			<!-- Include expanded plug-ins -->
 			<include name="org.eclipse.ui_*/org.eclipse.ui_*.jar"/>
 			<include name="org.eclipse.swt_*/org.eclipse.swt_*.jar"/>
@@ -63,7 +64,6 @@
 			<include name="org.eclipse.ui.ide_*/org.eclipse.ui.ide_*.jar"/>
 			<include name="org.eclipse.ui.views_*/org.eclipse.ui.views_*.jar"/>
 			<include name="org.eclipse.ui.navigator_*/navigator.jar"/>
-			<include name="org.eclipse.ui.navigator.resources_*/navigator_resources.jar"/>
 		</fileset>
 		<!-- Dependencies on other DTP plug-ins, built before this one -->
 		<fileset dir="../">
