[BZ128886]Updates to support Eclipse 3.2 M5

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -37,6 +37,10 @@
                id="org.eclipse.datatools.connectivity.db.sqlModelContent"
                labelProvider="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelLabelProviderExtension"
                name="SQL Model Content Extension">
+            <commonSorter
+            	id ="org.eclipse.datatools.connectivity.sqm.core.internal.ui.services.ExplorerSorterProvider"
+            	class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.services.ExplorerSorterProvider">
+            </commonSorter>   
             <actionProvider
             		id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelContentActionProvider"
             		class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelContentActionProvider">
