--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.properties
@@ -9,7 +9,13 @@
 #  Actuate Corporation - initial API and implementation
 #
 ###############################################################################
-# NLS String
+# Plug-in Profile Configuration for all ODA profile extensions
+#
+oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
+#
+###############################################################################
+# NLS Strings
 ###############################################################################
 #
 plugin.name=DTP ODA Designer UI Framework Plug-in
+oda.parent.category.name=ODA Data Sources
