--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -12,7 +12,7 @@
  *  
  *************************************************************************
  *
- * $Id: build.properties,v 1.1 2005/12/29 04:17:56 lchan Exp $
+ * $Id: build.properties,v 1.2 2006/02/04 10:30:26 lchan Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -36,5 +36,5 @@ temp.dir =		         ./tempdir/
 plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
-plugin.version =         3.0.0
+plugin.version =         3.0.0.200602241
 custom = true
