--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.properties
@@ -8,7 +8,7 @@ source.genericdbui.jar = src/
 output.genericdbui.jar = bin/
 src.dir		     = src/
 jars.extra.classpath =
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
