--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.datatools.connectivity.oda.flatfile.ui"
    name="%plugin.name"
-   version="3.0.0"
+   version="3.0.0.200602241"
    provider-name="Eclipse.org"
    class="org.eclipse.datatools.connectivity.oda.flatfile.ui.FlatFileUIPlugin">
 
