--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.datatools.connectivity.sqm.core.ui"
    name="%pluginName"
-   version="0.7.0"
+   version="0.7.0.200602241"
    provider-name="%providerName"
    class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.RDBCoreUIPlugin">
 
