--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
@@ -19,7 +19,7 @@ src.includes = component.xml
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
