--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.datatools.connectivity.sqm.core"
    name="%pluginName"
-   version="0.7.0"
+   version="0.7.0.200602241"
    provider-name="%providerName"
    class="org.eclipse.datatools.connectivity.sqm.internal.core.RDBCorePlugin">
 
