--- a/plugins/org.eclipse.datatools.connectivity/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity/build.properties
@@ -10,7 +10,7 @@ jars.compile.order 	= connectivity.jar
 output.connectivity.jar = bin/
 source.connectivity.jar = src/
 src.dir			 = src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
