Update version number for Callisto feature

--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.xml
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.xml
@@ -6,14 +6,14 @@
  * <copyright>
  * </copyright>
  *
- * $Id: plugin.xml,v 1.2 2005/06/15 18:16:15 ledunnel Exp $
+ * $Id: plugin.xml,v 1.1 2005/08/02 22:56:24 ledunnel Exp $
  */
 -->
 
 <plugin
     name = "%pluginName"
     id = "org.eclipse.datatools.modelbase.edit"
-    version = "0.7.0"
+    version = "0.7.0.200602241"
     provider-name = "%providerName"
     class = "org.eclipse.datatools.modelbase.sql.schema.provider.SqlmodelEditPlugin$Implementation">
 
