--- a/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
@@ -13,7 +13,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.1 2005/08/02 22:56:23 ledunnel Exp $
+ * $Id: build.properties,v 1.3 2006/01/10 16:57:00 jgraham Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -24,7 +24,7 @@ source.databasedefinition.jar = src/
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
