--- a/plugins/org.eclipse.datatools.modelbase.dbdefinition/plugin.xml
+++ b/plugins/org.eclipse.datatools.modelbase.dbdefinition/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.datatools.modelbase.dbdefinition"
    name="%pluginName"
-   version="0.7.0"
+   version="0.7.0.200602241"
    provider-name="%providerName">
 
    <runtime>
