--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
@@ -3,7 +3,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.1 2005/08/02 22:56:24 ledunnel Exp $
+ * $Id: build.properties,v 1.3 2006/01/10 17:00:30 jgraham Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -17,7 +17,7 @@ output.sqlmodel.edit.jar = bin/
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
