Update version number for Callisto feature

--- a/plugins/org.eclipse.datatools.sqltools.plan/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/build.properties
@@ -8,7 +8,7 @@ bin.includes = META-INF/,\
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
