--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
@@ -16,7 +16,7 @@ jars.compile.order = lexer.jar,\
               
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
