--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
@@ -39,7 +39,7 @@ src.excludes = src/com/ibm/db/parsers/sql/query/.cvsignore,\
             
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
