--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
@@ -14,7 +14,7 @@ src.includes = .classpath,\
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
