Deliver exemplary Derby routine editor

--- a/plugins/org.eclipse.datatools.sqltools.db.derby/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.db.derby/plugin.xml
@@ -2,11 +2,11 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension
-         id="org.eclipse.datatools.sqltools.db.derby.dbFactory"
+         id="org.eclipse.datatools.sqltools.db.derby.dbConfiguration"
          name="Derby Support"
-         point="org.eclipse.datatools.sqltools.editor.core.dbFactories">
-      <dbFactory
-            factoryClass="org.eclipse.datatools.sqltools.db.derby.core.DerbyFactory"
+         point="org.eclipse.datatools.sqltools.editor.core.dbConfigurations">
+      <dbConfiguration
+            configurationClass="org.eclipse.datatools.sqltools.db.derby.core.DerbyConfiguration"
             product="Derby"
             version="10.x"/>
    </extension>
