refactor IDBFactory to SQLDevToolsConfiguration, integrate connectivity layer recent changes

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
@@ -87,3 +87,5 @@ Save = Save
 Save_Resource = Save Resource
 
 SQLEditor.error.while.trying.to.install.sql.updater=Error occurred while trying to install sql udpater  
+
+SQLEditorStorage.default.name=Scrapbook
