refactor IDBFactory to SQLDevToolsConfiguration

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -22,3 +22,5 @@ NewSQLScrapbookFileWizardPage.title=Create SQL Scrapbook Page
 NewSQLScrapbookFileWizardPage.error.AlreadyExists=A file with the specified path already exists.
 NewSQLScrapbookFileWizardPage.open_error.message=Error occurred while opening SQL Scrapbook editor
 
+ScrapbookEditor.name=SQL Editor
+
