--- a/plugins/org.eclipse.datatools.sqltools.editor.core/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/build.xml
@@ -96,6 +96,8 @@
 			<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
 			<include name="org.eclipse.datatools.connectivity.db.generic/bin/*"/>
 			<include name="org.eclipse.datatools.connectivity.db.generic/genericdb.jar"/>
+			<include name="org.eclipse.datatools.modelbase.sql.query/bin/*"/>
+			<include name="org.eclipse.datatools.modelbase.sql.query/sqlquerymodel.jar"/>
 		</fileset>
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
