--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/build.xml
@@ -93,28 +93,28 @@
 		</fileset>
 		<!-- Dependencies on other DTP plug-ins, built before this one -->
 		<fileset dir="../">
-				<include name="org.eclipse.datatools.sqltools.sqleditor/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.sqleditor/sqleditor.jar"/>
-				<include name="org.eclipse.datatools.modelbase.sql/bin/"/>
-				<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
-				<include name="org.eclipse.datatools.connectivity/bin/"/>
-				<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
-				<include name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
-				<include name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
-				<include name="org.eclipse.datatools.sqltools.editor.core/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.editor.core/sqleditorframe.jar"/>
-				<include name="org.eclipse.datatools.sqltools.sql/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
-				<include name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
-				<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
-				<include name="org.eclipse.datatools.sqltools.result/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.result/sqlresult.jar"/>
-				<include name="org.eclipse.datatools.connectivity.ui/bin/"/>
-				<include name="org.eclipse.datatools.connectivity.ui/connectivityui.jar"/>
-				<include name="org.eclipse.datatools.modelbase.sql.query/bin/"/>
-				<include name="org.eclipse.datatools.modelbase.sql.query/sqlquerymodel.jar"/>
-				<include name="org.eclipse.datatools.sqltools.common.ui/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.common.ui/sqltoolscommonui.jar"/>
+			<include name="org.eclipse.datatools.connectivity/bin/"/>
+			<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
+			<include  name="org.eclipse.datatools.connectivity.db.generic/bin/"/>
+			<include  name="org.eclipse.datatools.connectivity.db.generic/genericdb.jar"/>
+			<include name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
+			<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
+			<include name="org.eclipse.datatools.connectivity.ui/bin/"/>
+			<include name="org.eclipse.datatools.connectivity.ui/connectivityui.jar"/>
+			<include name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
+			<include name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
+			<include name="org.eclipse.datatools.modelbase.sql/bin/"/>
+			<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
+			<include name="org.eclipse.datatools.sqltools.common.ui/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.common.ui/sqltoolscommonui.jar"/>
+			<include name="org.eclipse.datatools.sqltools.editor.core/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.editor.core/sqleditorframe.jar"/>
+			<include name="org.eclipse.datatools.sqltools.result/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.result/sqlresult.jar"/>
+			<include name="org.eclipse.datatools.sqltools.sql/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
+			<include name="org.eclipse.datatools.sqltools.sqleditor/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.sqleditor/sqleditor.jar"/>
 		</fileset>
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
