Fix build script errors

--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/build.xml
@@ -56,6 +56,7 @@
 			<include name="org.eclipse.ui.views_*.jar"/>
 			<include name="org.eclipse.debug.core_*.jar"/>
 			<include name="org.eclipse.debug.ui_*.jar"/>
+			<include name="org.eclipse.ui.ide_*.jar"/>
 			<!-- Include jared EMF plug-ins -->
 			<include name="org.eclipse.emf.ecore_*.jar"/>
 			<include name="org.eclipse.emf.common_*.jar"/>
@@ -81,6 +82,7 @@
 			<include name="org.eclipse.ui.views_*/org.eclipse.ui.views_*.jar"/>
 			<include name="org.eclipse.debug.core_*/org.eclipse.debug.core_*.jar"/>
 			<include name="org.eclipse.debug.core.ui_*/org.eclipse.debug.ui_*.jar"/>
+			<include name="org.eclipse.ui.ide_*/org.eclipse.ui.ide_*.jar"/>
 			<!-- Include expanded EMF plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
