--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.xml
@@ -56,6 +56,7 @@
 			<include name="org.eclipse.debug.ui_*.jar"/>
 			<include name="org.eclipse.ui.workbench.texteditor_*.jar"/>
 			<include name="org.eclipse.ui.views_*.jar"/>
+			<include name="org.eclipse.ui.ide_*.jar"/>
 			<!-- Include jared EMF plug-ins -->
 			<include name="org.eclipse.emf.ecore_*.jar"/>
 			<include name="org.eclipse.emf.common_*.jar"/>
@@ -81,6 +82,7 @@
 			<include name="org.eclipse.debug.ui_*/org.eclipse.debug.ui_*.jar"/>
 			<include name="org.eclipse.ui.workbench.texteditor_*/org.eclipse.ui.workbench.texteditor_*.jar"/>
 			<include name="org.eclipse.ui.views_*/org.eclipse.ui.views_*.jar"/>
+			<include name="org.eclipse.ui.ide_*/org.eclipse.ui.ide_*.jar"/>
 			<!-- Include expanded EMF plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
@@ -93,30 +95,28 @@
 		</fileset>
 		<!-- Dependencies on other DTP plug-ins, built before this one -->
 		<fileset dir="../">
-				<include name="org.eclipse.datatools.sqltools.editor.core/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.editor.core/sqleditorframe.jar"/>
-				<include name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
-				<include name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
-				<include name="org.eclipse.datatools.modelbase.sql/bin/"/>
-				<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
-				<include name="org.eclipse.datatools.connectivity/bin/"/>
-				<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
-				<include name="org.eclipse.datatools.sqltools.sql/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
-				<include name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
-				<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
-				<include name="org.eclipse.datatools.sqltools.sqleditor/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.sqleditor/sqleditor.jar"/>
-				<include name="org.eclipse.datatools.sqltools.result/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.result/sqlresult.jar"/>
-				<include name="org.eclipse.datatools.sqltools.routineeditor/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.routineeditor/routineeditor.jar"/>
-				<include name="org.eclipse.datatools.connectivity.ui/bin/"/>
-				<include name="org.eclipse.datatools.connectivity.ui/connectivityui.jar"/>
-				<include name="org.eclipse.datatools.modelbase.sql.query/bin/"/>
-				<include name="org.eclipse.datatools.modelbase.sql.query/sqlquerymodel.jar"/>
-				<include name="org.eclipse.datatools.sqltools.common.ui/bin/"/>
-				<include name="org.eclipse.datatools.sqltools.common.ui/sqltoolscommonui.jar"/>		
+			<include name="org.eclipse.datatools.connectivity/bin/"/>
+			<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
+			<include  name="org.eclipse.datatools.connectivity.db.generic/bin/"/>
+			<include  name="org.eclipse.datatools.connectivity.db.generic/genericdb.jar"/>
+			<include name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
+			<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
+			<include name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
+			<include name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
+			<include name="org.eclipse.datatools.modelbase.sql/bin/"/>
+			<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
+			<include name="org.eclipse.datatools.sqltools.common.ui/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.common.ui/sqltoolscommonui.jar"/>		
+			<include name="org.eclipse.datatools.sqltools.editor.core/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.editor.core/sqleditorframe.jar"/>
+			<include name="org.eclipse.datatools.sqltools.result/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.result/sqlresult.jar"/>
+			<include name="org.eclipse.datatools.sqltools.routineeditor/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.routineeditor/routineeditor.jar"/>
+			<include name="org.eclipse.datatools.sqltools.sql/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
+			<include name="org.eclipse.datatools.sqltools.sqleditor/bin/"/>
+			<include name="org.eclipse.datatools.sqltools.sqleditor/sqleditor.jar"/>
 		</fileset>
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
