added Event class to the model

--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
@@ -13,7 +13,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: plugin.properties,v 1.1 2005/08/02 22:56:24 ledunnel Exp $
+ * $Id: plugin.properties,v 1.2 2005/12/22 22:37:41 bpayton Exp $
  */
 
 # ====================================================================
@@ -411,4 +411,11 @@ _UI_ActionGranularityType_STATEMENT_literal = STATEMENT
 _UI_ActionGranularityType_ROW_literal = ROW
 _UI_CreateChild_text3 = {1}
 _UI_Unknown_datatype= Value
-
+
+_UI_Event_type = Event
+_UI_Database_events_feature = Events
+_UI_Event_for_feature = For
+_UI_Event_condition_feature = Condition
+_UI_Event_action_feature = Action
+_UI_Event_enabled_feature = Enabled
+_UI_Event_Database_feature = Database
