--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -85,3 +85,5 @@ error.contentExtension =Error connecting to the "{0}" extension on profile "{1}"
 CPVersionPropertyPage.desc=Version information for {0}.\nThis information was obtained from the last connection attempt.  If the last attempt to connect was unsuccessful, no version information will be available.
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server\:
+ConnectionProfileSummaryPage.button.testConnection=Test Connection
+CommonLabelProviderBase.label.version=v.
